--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,108 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/swipe_fresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_height="match_parent">
 
-    <LinearLayout
+    <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            tools:context=".MainActivity">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/convert_from"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"/>
+            android:gravity="center"
+            android:orientation="vertical">
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:orientation="vertical"
+                tools:context=".MainActivity">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/convert_from"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="14sp" />
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                <Spinner
+                        android:id="@+id/list_currency_from"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                <EditText
+                        android:id="@+id/value_from"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/colorAccent"
+                        android:hint="@string/empty_value"
+                        android:inputType="numberDecimal"
+                        android:lines="1"
+                        android:maxLength="15" />
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/convert_in"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="14sp" />
 
             <Spinner
-                    android:id="@+id/list_currency_from"
-                    android:layout_width="0dp"
+                    android:id="@+id/list_currency_to"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
-            </Spinner>
+                    android:layout_marginTop="10dp" />
 
-            <EditText
-                    android:id="@+id/value_from"
-                    android:layout_width="0dp"
+            <LinearLayout
+                    android:id="@+id/line_result"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:lines="1"
-                    android:inputType="numberDecimal"
-                    android:hint="@string/empty_value"
-                    android:maxLength="15"
-                    android:backgroundTint="@color/colorAccent">
-            </EditText>
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:visibility="invisible">
 
-        </LinearLayout>
+                <TextView
+                        android:id="@+id/result"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/result"
+                        android:textColor="@android:color/black" />
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/convert_in"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"/>
 
-        <Spinner
-                android:id="@+id/list_currency_to"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-        </Spinner>
+                <TextView
+                        android:id="@+id/result_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-        <LinearLayout
-                android:id="@+id/line_result"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:visibility="invisible">
+            </LinearLayout>
 
-            <TextView
-                    android:id="@+id/result"
-                    android:layout_width="wrap_content"
+            <Button
+                    android:id="@+id/get_result"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/result"
-                    android:textColor="@android:color/black"/>
-
-
-            <TextView
-                    android:id="@+id/result_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="35dp"
+                    android:text="@string/convert"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:theme="@style/RoundedCornerButton" />
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <Button
-            android:id="@+id/get_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="@string/convert"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="20dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:theme="@style/RoundedCornerButton"/>
-
-</FrameLayout>
+    </FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
